--- a/MVC_WebRole_v4/Views/Shared/ODP_MasterOriginal.Master
+++ b/MVC_WebRole_v4/Views/Shared/ODP_MasterOriginal.Master
@@ -44,29 +44,33 @@
         vpath = '<%= this.ResolveUrl("~/") %>';
     </script>
 </head>
-<body>
+<body bgcolor="#CCCCCC">
     <div>
-        <div style ="width:900px; margin: auto; <!--  -->">
-            <table style = "width: 100%">
+        <div style ="width:1000px; background: #FFFFFF; margin: auto; <!--  -->">
+            <table style = "width: 100%" >
                 <tr>
-                    <td background="/images/headers2010/cows.jpg" ><!--  -->
+                    <td><!--  -->
                         <table border="0" width="100%" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td align="left" valign="top">
-                                    <table border="0" width="100%" cellpadding="0" cellspacing="0">
+                                    <table id="banner_table" border="0" width="100%" cellpadding="0" cellspacing="0">
                                         <tr>
-                                            <td width="25">
+                                            <!--<td width="25">
                                                 &nbsp;
-                                            </td>
+                                            </td>-->
                                             <td>
-                                                <a href="http://www.civicinfo.bc.ca" title="CivicInfo BC Home" alt="CivicInfo BC Home" border="0">
-                                                    <img alt = "" src="/images/civicinfo250w_transparent.png" border="0" /></a>
+                                                <a href="http://www.data.civicinfo.ca" title="CivicInfo BC Home" alt="CivicInfo BC Home" border="0">
+                                                    <img alt = "" src="http://www.civicinfo.bc.ca/images/civicinfo300w_transparent2.png" border="0" /></a>
                                             </td>
+											<td align="right">
+												British Columbia Local Government&nbsp;<br />
+												Open Data Catalogue&nbsp;
+											</td>
                                         </tr>
                                     </table>
                                 </td>
                             </tr>
-                            <tr>
+                            <!--<tr>
                                 <td>&nbsp;</td>
                             </tr>
                             <tr>
@@ -74,10 +78,10 @@
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
-                            </tr>
+                            </tr>-->
                             <tr style = " height: 20px; background: #6890b5;">
                                 <td colspan = "2">
-                                    <div style ="width:900px; margin: auto;">
+                                    <div style ="width:1000px; margin: auto;">
                                         <%
                                             var isAuth = Page.User.Identity.IsAuthenticated;
 
@@ -98,6 +102,7 @@
                                         %>
                                         <div style = "width: 49%; float: left">
                                             <asp:HyperLink ID="cmdHome" CssClass = "header" NavigateUrl = "/" runat="server">Home</asp:HyperLink>
+											<asp:HyperLink ID="cmdTerms" CssClass = "header" runat="server" NavigateUrl = "http://www.data.civicinfo.ca/terms.htm" target="_blank">Terms of Use</asp:HyperLink>
                                         </div>
                                         <div style = "width: 50%; float: right; text-align: right;">
                                             <asp:HyperLink ID="cmdLogin" CssClass = "header" NavigateUrl = "/Login/" runat="server">Login</asp:HyperLink>
